--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title> Zenubud - Love Bali Villas Blogs</title>
-  <meta content="" name="Zenubud Villa: Discover Serenity at a Riverfront Retreat in Ubud Recommended by Love Bali Villas @lovebalivillas Expedia Partner">
-  <meta content="" name="Experience serenity and nature's embrace at Zenubud Villa, a captivating riverfront villa in Ubud endorsed by Love Bali Villas. Immerse yourself in tranquility and personalized service.   ">
+  <title> Yucca Villas - Love Bali Villas Blogs</title>
+  <meta content="" name="Yucca Villas: Unveil Tropical Tranquility in Canggu Recommended by Love Bali Villas @lovebalivillas Expedia Partner">
+  <meta content="" name="Immerse yourself in tropical paradise at Yucca Villas, a captivating villa in Canggu endorsed by Love Bali Villas. Experience serenity, luxury, and personalized service.   ">
 
   <!-- Favicons -->
   <link href="assets/img/favicon-32x32.png" rel="icon">
@@ -84,7 +84,7 @@
             </ul>
           </li>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
-          <li><a class="getstarted scrollto" href="https://expedia.com/affiliates/lovebalivillas/zenubud-villa" target="_blank">Book Now</a></li>
+          <li><a class="getstarted scrollto" href="https://expedia.com/affiliates/lovebalivillas/yucca-villas" target="_blank">Book Now</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -99,11 +99,11 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2>  Zenubud Villa: Discover Serenity at a Riverfront Retreat in Ubud Recommended by Love Bali Villas @lovebalivillas Expedia Partner</h2>
+          <h2>  Yucca Villas: Unveil Tropical Tranquility in Canggu Recommended by Love Bali Villas @lovebalivillas Expedia Partner</h2>
           <ol>
             <li><a href="https://www.lovebalivillas.pro/">Home</a></li>
             <li><a href="http://blogs.lovebalivillas.pro/">Blogs</a></li>
-            <li> Zenubud Villa </li>
+            <li> Yucca Villas </li>
           </ol>
         </div>
 
@@ -121,43 +121,43 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/blog/zenubud/1.jpg" alt="">
+                  <img src="assets/img/blog/yucca/1.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/blog/zenubud/2.jpg" alt="">
+                  <img src="assets/img/blog/yucca/2.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/blog/zenubud/3.jpg" alt="">
+                  <img src="assets/img/blog/yucca/3.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/blog/zenubud/4.jpg" alt="">
+                  <img src="assets/img/blog/yucca/4.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/blog/zenubud/5.jpg" alt="">
+                  <img src="assets/img/blog/yucca/5.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/blog/zenubud/6.jpg" alt="">
+                  <img src="assets/img/blog/yucca/6.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/blog/zenubud/7.jpg" alt="">
+                  <img src="assets/img/blog/yucca/7.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/blog/zenubud/8.jpg" alt="">
+                  <img src="assets/img/blog/yucca/8.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/blog/zenubud/9.jpg" alt="">
+                  <img src="assets/img/blog/yucca/9.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/blog/zenubud/10.jpg" alt="">
+                  <img src="assets/img/blog/yucca/10.jpg" alt="">
                 </div>
 
               </div>
@@ -167,17 +167,17 @@
 
           <div class="col-lg-4">
             <div class="portfolio-info">
-              <h3> Casa Noema Information</h3>
+              <h3> Yucca Villas Information</h3>
               <ul>
-                <li><strong>Property highlights:</strong> Located in Ubud, Zenubud Villa is in a rural area and on a river. Ubud Monkey Forest and Sangeh Monkey Forest reflect the area's natural beauty and area attractions include Spiritual Center Sinar Suci and Aloha Ubud Swing. Bali Safari and Marine Park and Bali Orchid Garden are also worth visiting.  </li>
-                <li><strong>Popular Amenities:</strong> Pool, Kitchen, Parking included, Free WiFi, Air conditioning & Laundry</li>
+                <li><strong>Property highlights:</strong> Yucca Villas is located in Canggu. The area's natural beauty can be seen at Seminyak Beach and Kuta Beach. Splash Waterpark Bali and Waterbom Bali are also worth visiting.  </li>
+                <li><strong>Popular Amenities:</strong> Pool, Kitchen, Parking included, Free WiFi, Air conditioning, Housekeeping & Laundry</li>
                 <li><strong>Explore Area:</strong> </li> 
-                <p> Ubud Peliatan Balerung Stage - 4 min drive </p>
-                 <p> Gaya Ceramic Arts Centre - 6 min drive </p> 
-                  <p> Ubud Monkey Forest - 7 min drive
+                <p> Echo Beach - 10 min drive </p>
+                 <p> Seseh Beach - 13 min drive </p> 
+                  <p> Canggu Beach - 17 min drive
                     </p>
-  <p>Denpasar (DPS-Ngurah Rai Intl.) - 86 min drive</p>
-                <li><strong>Book Now</strong>: <a href="https://expedia.com/affiliates/lovebalivillas/zenubud-villa" target="_blank">Check The Availablity</a></li>
+  <p>Denpasar (DPS-Ngurah Rai Intl.) - 50 min drive</p>
+                <li><strong>Book Now</strong>: <a href="https://expedia.com/affiliates/lovebalivillas/yucca-villas" target="_blank">Check The Availablity</a></li>
               </ul>
             </div>
             <div>
@@ -187,30 +187,30 @@
           <div class="eg-widget" data-widget="search" data-program="us-expedia" data-lobs="stays,flights" data-network="pz" data-camref="1100lC75G"></div>
 <script class="eg-widgets-script" src="https://affiliates.expediagroup.com/products/widgets/assets/eg-widgets.js"></script>
           <p>
-            Experience serenity and nature's embrace at <a href="https://expedia.com/affiliates/lovebalivillas/zenubud-villa" target="_blank">Zenubud Villa</a> , a captivating riverfront villa in Ubud endorsed by Love Bali Villas. Immerse yourself in tranquility and personalized service. Book confidently through our partnership with Expedia for an unforgettable getaway. #ZenubudVilla #UbudRetreat #LoveBaliVillasRecommendation
+            Immerse yourself in tropical paradise at <a href="https://expedia.com/affiliates/lovebalivillas/yucca-villas" target="_blank">Yucca Villas</a> , a captivating villa in Canggu endorsed by Love Bali Villas. Experience serenity, luxury, and personalized service. Book confidently through our partnership with Expedia for an unforgettable escape. #YuccaVillas #CangguRetreat #LoveBaliVillasRecommendation
 
           </p>
 <p> 
-  Nestled along the serene banks of a river in Ubud, <a href="https://expedia.com/affiliates/lovebalivillas/zenubud-villa" target="_blank">Zenubud Villa</a> beckons you to experience a tranquil escape surrounded by nature's beauty. As a captivating riverfront villa endorsed by Love Bali Villas, Zenubud Villa offers a retreat that harmoniously combines serenity, lush landscapes, and personalized service. Join us as we explore the allure of Zenubud Villa, where every moment is an ode to tranquility and natural wonder.
+  Nestled within the lush landscapes of Canggu, <a href="https://expedia.com/affiliates/lovebalivillas/yucca-villas" target="_blank">Yucca Villas</a> invites you to discover a tropical haven where luxury meets natural beauty. As a captivating villa endorsed by Love Bali Villas, Yucca Villas offers an escape that seamlessly combines tranquility, opulence, and personalized service. Join us as we delve into the allure of Yucca Villas, a sanctuary that embodies the essence of serenity and luxurious living.
 
 </p>
 <p>
-  Our team at Love Bali Villas had the privilege of immersing ourselves in the enchanting ambiance of <a href="https://expedia.com/affiliates/lovebalivillas/zenubud-villa" target="_blank">Zenubud Villa</a>, and we are excited to share our endorsement of this remarkable property. From the moment we set foot within the villa, we were enveloped in a sense of calm and serenity.
+  Our team at Love Bali Villas had the privilege of immersing ourselves in the beauty of <a href="https://expedia.com/affiliates/lovebalivillas/yucca-villas" target="_blank">Yucca Villas</a>, and we are excited to share our endorsement of this exceptional property. From the moment we stepped onto the grounds, we were captivated by the seamless blend of modern luxury and tropical charm.
 
 </p>
-<p> Zenubud Villa radiates an atmosphere of peaceful elegance that promises an unparalleled stay. Every facet of this exceptional villa has been thoughtfully designed to create an environment that seamlessly merges contemporary comfort with the raw beauty of nature. Whether you're relaxing on the veranda, listening to the soothing sounds of the river, or simply unwinding amidst the lush surroundings, Zenubud Villa offers an experience that is both rejuvenating and invigorating.
+<p> Yucca Villas exudes an aura of calm and elegance that guarantees a remarkable stay. Every facet of this villa has been meticulously designed to create an atmosphere that effortlessly fuses contemporary opulence with the lush beauty of the surroundings. Whether you're unwinding by the pool, enjoying exquisite cuisine, or simply taking in the natural surroundings, Yucca Villas offers an experience that is both rejuvenating and awe-inspiring.
 
 </p>
-<p> The thoughtfully appointed accommodations provide a sanctuary of tranquility and luxury. Each room within the villa is a private haven where you can immerse yourself in relaxation and natural beauty. Imagine waking up to the gentle rustling of leaves and starting your day in an atmosphere that resonates with peace.
+<p> The well-appointed accommodations provide a sanctuary of comfort and style. Each room within the villa offers a private escape where you can fully immerse yourself in relaxation and natural beauty. Imagine waking up to the gentle rustling of leaves and beginning your day in an ambiance that radiates tranquility.
 
 </p>
-<p> A standout feature of <a href="https://expedia.com/affiliates/lovebalivillas/zenubud-villa" target="_blank">Zenubud Villa</a> is its collaboration with Expedia, ensuring a seamless booking process and dedicated service throughout your stay. Love Bali Villas is dedicated to endorsing properties that prioritize guest satisfaction, and Zenubud Villa embodies this commitment wholeheartedly.
+<p> A standout feature of <a href="https://expedia.com/affiliates/lovebalivillas/yucca-villas" target="_blank">Yucca Villas</a> is its partnership with Expedia, ensuring a seamless booking process and dedicated service throughout your stay. Love Bali Villas is committed to endorsing properties that prioritize guest satisfaction, and Yucca Villas exemplifies this commitment wholeheartedly.
 
 </p>
-<p> Set amidst the serene landscapes of Ubud, <a href="https://expedia.com/affiliates/lovebalivillas/zenubud-villa" target="_blank">Zenubud Villa</a> offers the perfect blend of nature's embrace and tranquil escape. With its exceptional amenities, attentive staff, and natural design elements, this villa provides an unforgettable and rejuvenating retreat.
+<p> Nestled amidst the serene landscapes of Canggu, <a href="https://expedia.com/affiliates/lovebalivillas/yucca-villas" target="_blank">Yucca Villas</a> offers the perfect fusion of tropical beauty and luxurious living. With its exceptional amenities, attentive staff, and harmonious design, this villa provides an unforgettable and rejuvenating escape.
 
 </p>
-<p> Experience the enchantment of nature and tranquility at <a href="https://expedia.com/affiliates/lovebalivillas/zenubud-villa" target="_blank">Zenubud Villa</a>, a sanctuary that promises an unparalleled getaway. Book your stay today and immerse yourself in a world of serenity, natural beauty, and the captivating allure of Ubud.
+<p> Immerse yourself in the magic of <a href="https://expedia.com/affiliates/lovebalivillas/yucca-villas" target="_blank">Yucca Villas</a>s, a sanctuary that promises an unparalleled retreat. Book your stay today and experience a world where tropical tranquility and luxury unite in perfect harmony.
 
 </p>
 
