--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title> Yucca Villas - Love Bali Villas Blogs</title>
-  <meta content="" name="Yucca Villas: Unveil Tropical Tranquility in Canggu Recommended by Love Bali Villas @lovebalivillas Expedia Partner">
-  <meta content="" name="Immerse yourself in tropical paradise at Yucca Villas, a captivating villa in Canggu endorsed by Love Bali Villas. Experience serenity, luxury, and personalized service.   ">
+  <title> Sealuna Villa - Love Bali Villas Blogs</title>
+  <meta content="" name="Sealuna Villas: Embrace Modern Tropical Elegance in Tanah Lot Recommended by Love Bali Villas @lovebalivillas Expedia Partner">
+  <meta content="" name="Dive into a world of modern tropical elegance at Sealuna Villas, an enchanting villa in Tanah Lot endorsed by Love Bali Villas. Experience luxury, serenity, and personalized service. Book confidently through our partnership with Expedia for an unforgettable getaway. #SealunaVillas #TanahLotRetreat #LoveBaliVillasRecommendation   ">
 
   <!-- Favicons -->
   <link href="assets/img/favicon-32x32.png" rel="icon">
@@ -84,7 +84,7 @@
             </ul>
           </li>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
-          <li><a class="getstarted scrollto" href="https://expedia.com/affiliates/lovebalivillas/yucca-villas" target="_blank">Book Now</a></li>
+          <li><a class="getstarted scrollto" href="https://expedia.com/affiliates/lovebalivillas/sealuna-villa" target="_blank">Book Now</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -99,11 +99,11 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2>  Yucca Villas: Unveil Tropical Tranquility in Canggu Recommended by Love Bali Villas @lovebalivillas Expedia Partner</h2>
+          <h2>  Sealuna Villas: Embrace Modern Tropical Elegance in Tanah Lot Recommended by Love Bali Villas @lovebalivillas Expedia Partner</h2>
           <ol>
             <li><a href="https://www.lovebalivillas.pro/">Home</a></li>
             <li><a href="http://blogs.lovebalivillas.pro/">Blogs</a></li>
-            <li> Yucca Villas </li>
+            <li> Sealuna Villas </li>
           </ol>
         </div>
 
@@ -121,43 +121,43 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/blog/yucca/1.jpg" alt="">
+                  <img src="assets/img/blog/sealuna/1.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/blog/yucca/2.jpg" alt="">
+                  <img src="assets/img/blog/sealuna/2.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/blog/yucca/3.jpg" alt="">
+                  <img src="assets/img/blog/sealuna/3.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/blog/yucca/4.jpg" alt="">
+                  <img src="assets/img/blog/sealuna/4.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/blog/yucca/5.jpg" alt="">
+                  <img src="assets/img/blog/sealuna/5.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/blog/yucca/6.jpg" alt="">
+                  <img src="assets/img/blog/sealuna/6.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/blog/yucca/7.jpg" alt="">
+                  <img src="assets/img/blog/sealuna/7.jpg.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/blog/yucca/8.jpg" alt="">
+                  <img src="assets/img/blog/sealuna/8.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/blog/yucca/9.jpg" alt="">
+                  <img src="assets/img/blog/sealuna/9.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/blog/yucca/10.jpg" alt="">
+                  <img src="assets/img/blog/sealuna/10.jpg" alt="">
                 </div>
 
               </div>
@@ -167,17 +167,16 @@
 
           <div class="col-lg-4">
             <div class="portfolio-info">
-              <h3> Yucca Villas Information</h3>
+              <h3> Sealuna Villa Information</h3>
               <ul>
-                <li><strong>Property highlights:</strong> Yucca Villas is located in Canggu. The area's natural beauty can be seen at Seminyak Beach and Kuta Beach. Splash Waterpark Bali and Waterbom Bali are also worth visiting.  </li>
-                <li><strong>Popular Amenities:</strong> Pool, Kitchen, Parking included, Free WiFi, Air conditioning, Housekeeping & Laundry</li>
+                <li><strong>Property highlights:</strong> Sealuna is located in Tabanan. The area's natural beauty can be seen at Seminyak Beach and Legian Beach. Blue Bubble Bali and Splash Waterpark Bali are also worth visiting.  </li>
+                <li><strong>Popular Amenities:</strong> Pool, Kitchen, Parking included, Free WiFi, Air conditioning, Laundry & Outdoor Space</li>
                 <li><strong>Explore Area:</strong> </li> 
-                <p> Echo Beach - 10 min drive </p>
-                 <p> Seseh Beach - 13 min drive </p> 
-                  <p> Canggu Beach - 17 min drive
+                <p> Kedungu Beach - 9 min walk </p>
+                 <p> Blue Bubble Bali -  4 min drive </p>  - 7 min drive
                     </p>
-  <p>Denpasar (DPS-Ngurah Rai Intl.) - 50 min drive</p>
-                <li><strong>Book Now</strong>: <a href="https://expedia.com/affiliates/lovebalivillas/yucca-villas" target="_blank">Check The Availablity</a></li>
+  <p>Denpasar (DPS-Ngurah Rai Intl.) - 66 min drive</p>
+                <li><strong>Book Now</strong>: <a href="https://expedia.com/affiliates/lovebalivillas/sealuna-villa" target="_blank">Check The Availablity</a></li>
               </ul>
             </div>
             <div>
@@ -187,30 +186,30 @@
           <div class="eg-widget" data-widget="search" data-program="us-expedia" data-lobs="stays,flights" data-network="pz" data-camref="1100lC75G"></div>
 <script class="eg-widgets-script" src="https://affiliates.expediagroup.com/products/widgets/assets/eg-widgets.js"></script>
           <p>
-            Immerse yourself in tropical paradise at <a href="https://expedia.com/affiliates/lovebalivillas/yucca-villas" target="_blank">Yucca Villas</a> , a captivating villa in Canggu endorsed by Love Bali Villas. Experience serenity, luxury, and personalized service. Book confidently through our partnership with Expedia for an unforgettable escape. #YuccaVillas #CangguRetreat #LoveBaliVillasRecommendation
+            Dive into a world of modern tropical elegance at <a href="https://expedia.com/affiliates/lovebalivillas/sealuna-villa" target="_blank">Sealuna Villas</a>, an enchanting villa in Tanah Lot endorsed by Love Bali Villas. Experience luxury, serenity, and personalized service. Book confidently through our partnership with Expedia for an unforgettable getaway. #
 
           </p>
 <p> 
-  Nestled within the lush landscapes of Canggu, <a href="https://expedia.com/affiliates/lovebalivillas/yucca-villas" target="_blank">Yucca Villas</a> invites you to discover a tropical haven where luxury meets natural beauty. As a captivating villa endorsed by Love Bali Villas, Yucca Villas offers an escape that seamlessly combines tranquility, opulence, and personalized service. Join us as we delve into the allure of Yucca Villas, a sanctuary that embodies the essence of serenity and luxurious living.
+  Nestled in the pristine landscapes of Tanah Lot, <a href="https://expedia.com/affiliates/lovebalivillas/sealuna-villa" target="_blank">Sealuna Villas</a> invites you to experience a realm of modern tropical elegance where luxury meets nature's beauty. As a captivating villa endorsed by Love Bali Villas, Sealuna Villas presents an escape that seamlessly blends contemporary luxury, tranquility, and personalized service. Join us as we delve into the allure of Sealuna Villas, a haven that embodies the essence of sophistication and luxurious living.
 
 </p>
 <p>
-  Our team at Love Bali Villas had the privilege of immersing ourselves in the beauty of <a href="https://expedia.com/affiliates/lovebalivillas/yucca-villas" target="_blank">Yucca Villas</a>, and we are excited to share our endorsement of this exceptional property. From the moment we stepped onto the grounds, we were captivated by the seamless blend of modern luxury and tropical charm.
+  Our team at Love Bali Villas had the pleasure of immersing ourselves in the charm of <a href="https://expedia.com/affiliates/lovebalivillas/sealuna-villa" target="_blank">Sealuna Villas</a>, and we are thrilled to share our endorsement of this exquisite property. From the moment we arrived, we were captivated by the seamless integration of contemporary design and natural splendor.
 
 </p>
-<p> Yucca Villas exudes an aura of calm and elegance that guarantees a remarkable stay. Every facet of this villa has been meticulously designed to create an atmosphere that effortlessly fuses contemporary opulence with the lush beauty of the surroundings. Whether you're unwinding by the pool, enjoying exquisite cuisine, or simply taking in the natural surroundings, Yucca Villas offers an experience that is both rejuvenating and awe-inspiring.
+<p> Sealuna Villas exudes an atmosphere of refined elegance that promises an unforgettable stay. Every detail of this villa has been thoughtfully curated to create an ambiance that seamlessly fuses modern sophistication with the tropical beauty of the surroundings. Whether you're lounging by the pool, relishing gourmet cuisine, or simply basking in the natural environment, <a href="https://expedia.com/affiliates/lovebalivillas/sealuna-villa" target="_blank">Sealuna Villas</a> offers an experience that is both invigorating and luxurious.
 
 </p>
-<p> The well-appointed accommodations provide a sanctuary of comfort and style. Each room within the villa offers a private escape where you can fully immerse yourself in relaxation and natural beauty. Imagine waking up to the gentle rustling of leaves and beginning your day in an ambiance that radiates tranquility.
+<p> The beautifully appointed accommodations offer a haven of comfort and style. Each room within the villa provides a private sanctuary where you can immerse yourself in relaxation and natural splendor. Imagine waking up to the soothing sounds of nature and starting your day in an ambiance that radiates tranquility.
 
 </p>
-<p> A standout feature of <a href="https://expedia.com/affiliates/lovebalivillas/yucca-villas" target="_blank">Yucca Villas</a> is its partnership with Expedia, ensuring a seamless booking process and dedicated service throughout your stay. Love Bali Villas is committed to endorsing properties that prioritize guest satisfaction, and Yucca Villas exemplifies this commitment wholeheartedly.
+<p> A standout feature of Sealuna Villas is its collaboration with Expedia, ensuring a seamless booking process and dedicated service throughout your stay. Love Bali Villas is dedicated to endorsing properties that prioritize guest satisfaction, and <a href="https://expedia.com/affiliates/lovebalivillas/sealuna-villa" target="_blank">Sealuna Villas</a> embodies this commitment wholeheartedly.
 
 </p>
-<p> Nestled amidst the serene landscapes of Canggu, <a href="https://expedia.com/affiliates/lovebalivillas/yucca-villas" target="_blank">Yucca Villas</a> offers the perfect fusion of tropical beauty and luxurious living. With its exceptional amenities, attentive staff, and harmonious design, this villa provides an unforgettable and rejuvenating escape.
+<p> Nestled amidst the pristine landscapes of Tanah Lot, <a href="https://expedia.com/affiliates/lovebalivillas/sealuna-villa" target="_blank">Sealuna Villas</a> offers the perfect fusion of modern luxury and natural beauty. With its exceptional amenities, attentive staff, and contemporary design, this villa provides an unforgettable and rejuvenating escape.
 
 </p>
-<p> Immerse yourself in the magic of <a href="https://expedia.com/affiliates/lovebalivillas/yucca-villas" target="_blank">Yucca Villas</a>s, a sanctuary that promises an unparalleled retreat. Book your stay today and experience a world where tropical tranquility and luxury unite in perfect harmony.
+<p> Indulge in the allure of <a href="https://expedia.com/affiliates/lovebalivillas/sealuna-villa" target="_blank">Sealuna Villas</a>s, a sanctuary that promises an unparalleled retreat. Book your stay today and experience a world where modern luxury and tropical elegance coexist in perfect harmony.
 
 </p>
 
