--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title> Sealuna Villa - Love Bali Villas Blogs</title>
-  <meta content="" name="Sealuna Villas: Embrace Modern Tropical Elegance in Tanah Lot Recommended by Love Bali Villas @lovebalivillas Expedia Partner">
-  <meta content="" name="Dive into a world of modern tropical elegance at Sealuna Villas, an enchanting villa in Tanah Lot endorsed by Love Bali Villas. Experience luxury, serenity, and personalized service. Book confidently through our partnership with Expedia for an unforgettable getaway. #SealunaVillas #TanahLotRetreat #LoveBaliVillasRecommendation   ">
+  <title> Villa Anahata - Love Bali Villas Blogs</title>
+  <meta content="" name="Villa Anahata: Discover Modern Luxury in a 2-Bedroom Retreat in Seminyak Recommended by Love Bali Villas @lovebalivillas Expedia Partner">
+  <meta content="" name="Immerse yourself in modern luxury at Villa Anahata, a sublime 2-bedroom villa in Seminyak endorsed by Love Bali Villas. Experience elegance, tranquility, and personalized service.   ">
 
   <!-- Favicons -->
   <link href="assets/img/favicon-32x32.png" rel="icon">
@@ -84,7 +84,7 @@
             </ul>
           </li>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
-          <li><a class="getstarted scrollto" href="https://expedia.com/affiliates/lovebalivillas/sealuna-villa" target="_blank">Book Now</a></li>
+          <li><a class="getstarted scrollto" href="https://expedia.com/affiliates/lovebalivillas/villa-anahata" target="_blank">Book Now</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -99,11 +99,11 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2>  Sealuna Villas: Embrace Modern Tropical Elegance in Tanah Lot Recommended by Love Bali Villas @lovebalivillas Expedia Partner</h2>
+          <h2>  Villa Anahata: Discover Modern Luxury in a 2-Bedroom Retreat in Seminyak Recommended by Love Bali Villas @lovebalivillas Expedia Partner</h2>
           <ol>
             <li><a href="https://www.lovebalivillas.pro/">Home</a></li>
             <li><a href="http://blogs.lovebalivillas.pro/">Blogs</a></li>
-            <li> Sealuna Villas </li>
+            <li> Villa Anahata </li>
           </ol>
         </div>
 
@@ -121,43 +121,43 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/blog/sealuna/1.jpg" alt="">
+                  <img src="assets/img/blog/ana/1.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/blog/sealuna/2.jpg" alt="">
+                  <img src="assets/img/blog/ana/2.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/blog/sealuna/3.jpg" alt="">
+                  <img src="assets/img/blog/ana/3.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/blog/sealuna/4.jpg" alt="">
+                  <img src="assets/img/blog/ana/4.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/blog/sealuna/5.jpg" alt="">
+                  <img src="assets/img/blog/ana/5.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/blog/sealuna/6.jpg" alt="">
+                  <img src="assets/img/blog/ana/6.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/blog/sealuna/7.jpg.jpg" alt="">
+                  <img src="assets/img/blog/ana/7.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/blog/sealuna/8.jpg" alt="">
+                  <img src="assets/img/blog/ana/8.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/blog/sealuna/9.jpg" alt="">
+                  <img src="assets/img/blog/ana/9.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/blog/sealuna/10.jpg" alt="">
+                  <img src="assets/img/blog/ana/10.jpg" alt="">
                 </div>
 
               </div>
@@ -167,16 +167,16 @@
 
           <div class="col-lg-4">
             <div class="portfolio-info">
-              <h3> Sealuna Villa Information</h3>
+              <h3> Villa Anahata Information</h3>
               <ul>
-                <li><strong>Property highlights:</strong> Sealuna is located in Tabanan. The area's natural beauty can be seen at Seminyak Beach and Legian Beach. Blue Bubble Bali and Splash Waterpark Bali are also worth visiting.  </li>
+                <li><strong>Property highlights:</strong> Along with an outdoor pool, this villa has dry cleaning and free self parking. WiFi in public areas is free. The villa boasts a private pool and offers a kitchen and 2 bathrooms. Guests can appreciate conveniences like a dining area and a sitting area, and other amenities include a refrigerator and a microwave.  </li>
                 <li><strong>Popular Amenities:</strong> Pool, Kitchen, Parking included, Free WiFi, Air conditioning, Laundry & Outdoor Space</li>
                 <li><strong>Explore Area:</strong> </li> 
-                <p> Kedungu Beach - 9 min walk </p>
-                 <p> Blue Bubble Bali -  4 min drive </p>  - 7 min drive
-                    </p>
-  <p>Denpasar (DPS-Ngurah Rai Intl.) - 66 min drive</p>
-                <li><strong>Book Now</strong>: <a href="https://expedia.com/affiliates/lovebalivillas/sealuna-villa" target="_blank">Check The Availablity</a></li>
+                <p> Eat Street - 6 min walk </p>
+                 <p> Seminyak Square - 7 min walk </p>
+                 <p> Seminyak Beach - 14 min walk </p>
+  <p>Denpasar (DPS-Ngurah Rai Intl.) - 32 min drive </p>
+                <li><strong>Book Now</strong>: <a href="https://expedia.com/affiliates/lovebalivillas/villa-anahata" target="_blank">Check The Availablity</a></li>
               </ul>
             </div>
             <div>
@@ -186,30 +186,30 @@
           <div class="eg-widget" data-widget="search" data-program="us-expedia" data-lobs="stays,flights" data-network="pz" data-camref="1100lC75G"></div>
 <script class="eg-widgets-script" src="https://affiliates.expediagroup.com/products/widgets/assets/eg-widgets.js"></script>
           <p>
-            Dive into a world of modern tropical elegance at <a href="https://expedia.com/affiliates/lovebalivillas/sealuna-villa" target="_blank">Sealuna Villas</a>, an enchanting villa in Tanah Lot endorsed by Love Bali Villas. Experience luxury, serenity, and personalized service. Book confidently through our partnership with Expedia for an unforgettable getaway. #
+            Immerse yourself in modern luxury at <a href="https://expedia.com/affiliates/lovebalivillas/villa-anahata" target="_blank">Villa Anahata</a>, a sublime 2-bedroom villa in Seminyak endorsed by Love Bali Villas. Experience elegance, tranquility, and personalized service. Book confidently through our partnership with Expedia for an unforgettable escape. #VillaAnahata #SeminyakLuxury #LoveBaliVillasRecommendation
 
           </p>
 <p> 
-  Nestled in the pristine landscapes of Tanah Lot, <a href="https://expedia.com/affiliates/lovebalivillas/sealuna-villa" target="_blank">Sealuna Villas</a> invites you to experience a realm of modern tropical elegance where luxury meets nature's beauty. As a captivating villa endorsed by Love Bali Villas, Sealuna Villas presents an escape that seamlessly blends contemporary luxury, tranquility, and personalized service. Join us as we delve into the allure of Sealuna Villas, a haven that embodies the essence of sophistication and luxurious living.
+  Nestled within the vibrant heart of Seminyak, <a href="https://expedia.com/affiliates/lovebalivillas/villa-anahata" target="_blank">Villa Anahata</a> beckons you to explore a realm of modern luxury where sophistication meets the essence of relaxation. As a captivating villa endorsed by Love Bali Villas, Villa Anahata offers an escape that seamlessly melds elegance, tranquility, and personalized service. Join us as we delve into the allure of Villa Anahata, a sanctuary that encapsulates the epitome of contemporary luxury.
 
 </p>
 <p>
-  Our team at Love Bali Villas had the pleasure of immersing ourselves in the charm of <a href="https://expedia.com/affiliates/lovebalivillas/sealuna-villa" target="_blank">Sealuna Villas</a>, and we are thrilled to share our endorsement of this exquisite property. From the moment we arrived, we were captivated by the seamless integration of contemporary design and natural splendor.
+  Our team at Love Bali Villas had the pleasure of immersing ourselves in the enchantment of <a href="https://expedia.com/affiliates/lovebalivillas/villa-anahata" target="_blank">Villa Anahata</a>, and we are thrilled to share our endorsement of this remarkable property. From the moment we arrived, we were captivated by the seamless integration of modern design and serene ambience.
 
 </p>
-<p> Sealuna Villas exudes an atmosphere of refined elegance that promises an unforgettable stay. Every detail of this villa has been thoughtfully curated to create an ambiance that seamlessly fuses modern sophistication with the tropical beauty of the surroundings. Whether you're lounging by the pool, relishing gourmet cuisine, or simply basking in the natural environment, <a href="https://expedia.com/affiliates/lovebalivillas/sealuna-villa" target="_blank">Sealuna Villas</a> offers an experience that is both invigorating and luxurious.
+<p> Villa Anahata exudes an aura of refined luxury that guarantees an extraordinary stay. Every element of this villa has been meticulously crafted to create an environment that effortlessly merges modern sophistication with the peaceful beauty of its surroundings. Whether you're unwinding by the pool, indulging in exquisite cuisine, or simply savoring the surrounding tranquility, Villa Anahata offers an experience that is both revitalizing and opulent.
 
 </p>
-<p> The beautifully appointed accommodations offer a haven of comfort and style. Each room within the villa provides a private sanctuary where you can immerse yourself in relaxation and natural splendor. Imagine waking up to the soothing sounds of nature and starting your day in an ambiance that radiates tranquility.
+<p> The elegantly appointed accommodations provide an oasis of comfort and style. Each room within the villa presents a private haven where you can fully immerse yourself in relaxation and contemporary elegance. Imagine waking up to the gentle sounds of nature and beginning your day in an atmosphere that radiates serenity.
 
 </p>
-<p> A standout feature of Sealuna Villas is its collaboration with Expedia, ensuring a seamless booking process and dedicated service throughout your stay. Love Bali Villas is dedicated to endorsing properties that prioritize guest satisfaction, and <a href="https://expedia.com/affiliates/lovebalivillas/sealuna-villa" target="_blank">Sealuna Villas</a> embodies this commitment wholeheartedly.
+<p> A standout feature of <a href="https://expedia.com/affiliates/lovebalivillas/villa-anahata" target="_blank">Villa Anahata</a> is its collaboration with Expedia, ensuring a seamless booking process and dedicated service throughout your stay. Love Bali Villas is committed to endorsing properties that prioritize guest satisfaction, and Villa Anahata exemplifies this commitment wholeheartedly.
 
 </p>
-<p> Nestled amidst the pristine landscapes of Tanah Lot, <a href="https://expedia.com/affiliates/lovebalivillas/sealuna-villa" target="_blank">Sealuna Villas</a> offers the perfect fusion of modern luxury and natural beauty. With its exceptional amenities, attentive staff, and contemporary design, this villa provides an unforgettable and rejuvenating escape.
+<p> Nestled within the vibrant streets of Seminyak, <a href="https://expedia.com/affiliates/lovebalivillas/villa-anahata" target="_blank">Villa Anahata</a> offers the perfect fusion of modern elegance and serene surroundings. With its exceptional amenities, attentive staff, and contemporary design, this villa provides an unforgettable and rejuvenating escape.
 
 </p>
-<p> Indulge in the allure of <a href="https://expedia.com/affiliates/lovebalivillas/sealuna-villa" target="_blank">Sealuna Villas</a>s, a sanctuary that promises an unparalleled retreat. Book your stay today and experience a world where modern luxury and tropical elegance coexist in perfect harmony.
+<p> Indulge in the allure of <a href="https://expedia.com/affiliates/lovebalivillas/villa-anahata" target="_blank">Villa Anahata</a>, a sanctuary that promises an unmatched retreat. Book your stay today and experience a world where modern luxury and tranquility coexist in perfect harmony.
 
 </p>
 
